# Restaurant-Pos

./: .gitignore  README.md  index.html  package.json  tsconfig.bun.json  tsconfig.json  vite.config.ts
bun/: db.ts  receipt-pdf.ts  server.ts
db/: app.db-shm  app.db-wal  schema.sql
docs/: design.md
scripts/: load_test.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: lazy.ts
src/data/: api.ts  types.ts
src/ui/components/: BillSummary.tsx  BillTable.tsx  InlineEditableRow.tsx  Pagination.tsx  ProductSearch.tsx  QtyStepper.tsx  Sidebar.tsx
src/ui/pages/: AnalyticsPage.tsx  BackupPage.tsx  BillHistoryPage.tsx  BillingPage.tsx  CategoriesPage.tsx
